fix(info.html) - started aligning the itmes list of resources on the top

--- a/main.css
+++ b/main.css
@@ -18,7 +18,7 @@ body{
 h1{
     font-size: 60px;
 }
-a, p{
+a, p, li{
     font-size: 24px;
 }
 
